update test and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
 
     <string name="main_today">Heute</string>
     <string name="main_top5Notes">Top 5 Notizen</string>
+    <string name="main_importantToDos">5 Wichtigste ToDos</string>
     <string name="main_savedMarkList">Gespeicherte Notenliste</string>
     <string name="main_noEntry">Kein Eintrag</string>
     <string name="main_refreshSuccessFully">Erfolgreich aktualisiert!</string>
