--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -324,6 +324,7 @@
     <string name="sys_description">Beschreibung</string>
     <string name="sys_title">Titel</string>
     <string name="sys_memory">Erinnerung</string>
+    <string name="sys_showData">Daten zeigen</string>
 
     <string name="message_marklist_1">Die maximale Punktzahl sollte größer als 0 sein!</string>
     <string name="message_marklist_2">Die maximale Punktzahl sollte kleiner als 40000 sein!</string>
