update strings and readme

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -310,7 +310,7 @@
             <h2>Bilder</h2>
             <hr/>
             <p>Die Android-App benutzt Bilder von Unsplash.</p>
-            <p>Die Android-App benutzt icons von Android. Die Bibliothek sind lizenziert unter der the Apache License V 2.0.</p>
+            <p>Die Android-App benutzt icons von Android. Die Bibliothek ist lizenziert unter der the Apache License V 2.0.</p>
         ]]>
     </string>
 
