--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -288,6 +288,12 @@
     <string name="learningCard_query_showNotes">Hinweise zeigen</string>
     <string name="learningCard_query_tries">Versuche</string>
     <string name="learningCard_query_showNotesImmediately">Hinweise sofort zeigen</string>
+    <string name="learningCard_query_start">Abfrage starten</string>
+    <string name="learningCard_query_end">Abfrage beenden</string>
+    <string name="learningCard_query_select">Abfrage sauswählen</string>
+    <string name="learningCard_query_check">Antwort korrigieren</string>
+    <string name="learningCard_query_answer_right">Antwort korrekt!</string>
+    <string name="learningCard_query_answer_wrong">Antwort falsch!</string>
 
     <string name="api_choice">Im- oder Export?</string>
     <string name="api_type">Modul</string>
