--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -294,6 +294,12 @@
     <string name="learningCard_query_check">Antwort korrigieren</string>
     <string name="learningCard_query_answer_right">Antwort korrekt!</string>
     <string name="learningCard_query_answer_wrong">Antwort falsch!</string>
+    <string name="learningCard_result">Ergebnis</string>
+    <string name="learningCard_result_wrong">Falsche Antworten:</string>
+    <string name="learningCard_result_right">Richtige Antworten:</string>
+    <string name="learningCard_result_firstTry">Im ersten Versuch:</string>
+    <string name="learningCard_result_secondTry">Im zweiten Versuch:</string>
+    <string name="learningCard_result_thirdTry">Im dritten Versuch:</string>
 
     <string name="api_choice">Im- oder Export?</string>
     <string name="api_type">Modul</string>
@@ -383,6 +389,7 @@
     <string name="sys_title">Titel</string>
     <string name="sys_memory">Erinnerung</string>
     <string name="sys_showData">Daten zeigen</string>
+    <string name="sys_seperator">:</string>
 
     <string name="message_marklist_1">Die maximale Punktzahl sollte größer als 0 sein!</string>
     <string name="message_marklist_2">Die maximale Punktzahl sollte kleiner als 40000 sein!</string>
