--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -450,4 +450,8 @@
     </string>
     <string name="message_validator_times">Aktuelle Stunde ist ungültig!</string>
     <string name="message_validator_teachers">Der Lehrer existiert bereits!</string>
+
+    <string name="message_file_format_unknown">Das Format ist nicht bekannt!</string>
+    <string name="message_file_not_exists">Die Datei existiert nicht!</string>
+    <string name="message_wrong_method">Falsche Methode wurde benutzt!</string>
 </resources>
