add setting for custom-backgrounds

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -102,6 +102,9 @@
     <string name="settings_general">Allgemein</string>
     <string name="settings_general_notifications_title">Notifikationen anzeigen</string>
     <string name="settings_general_notifications_summary">Notifikationen von aktuellen Erinnerungen anzeigen!</string>
+    <string name="settings_general_custom_background_title">Eigenes Hintergrundbild</string>
+    <string name="settings_general_custom_background_summary">App-Hintergrundbild durch eigenes Bild ersetzen!</string>
+    <string name="settings_general_custom_background_select">Bilder auswählen</string>
     <string name="settings_general_whatsNew_title">Neuigkeiten erneut anzeigen</string>
     <string name="settings_general_whatsNew_summary">Den Neuigkeiten Bildschirm erneut anzeigen</string>
     <string name="settings_general_deleteMemories_title">Erinnerungen löschen</string>
